BugzID: 18185 Campaigns: Menu Labeling body doesn't align with header image/menu

--- a/themes/takepart3/css/style.css
+++ b/themes/takepart3/css/style.css
@@ -176,10 +176,14 @@ img.photo, .gallery-item img {
 	padding: 35px 20px;
 }
 
+.node-type-takepart-campaign #page.page-multipage {
+  padding-left: 20px;
+}
 #page.page-multipage {
   /*padding:0px;*/
   padding-right: 0;
   /*padding-top: 0;*/
+ padding-left: 0;
 }
 
 .main-content {
